Adds information about endpoints and their functionality/methods to documentation.html file

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -13,6 +13,16 @@
                 application will provide users with access to information about different
                 movies, directors, and genres. Users will be able to sign up, update their
                 personal information, and create a list of their favorite movies.</p>
+            <h2>Endpoints:</h2>
+            <p>/movies - Returns a list of all movies via GET method</p>
+            <p>/movies/[title] - Returns data to the user about a specific movie by title via GET method</p>
+            <p>/genres/[genre] - Returns data about a genre via GET method</p>
+            <p>/directors/[director_name] - Returns data (bio, birth year, death year) about a specific director via GET method</p>
+            <p>/users - Allows new user to register via POST method</p>
+            <p>/users/[user] - Allows user to update user information (username, email, password)</p>
+            <p>/users/favorites - Allows users to add a movie to their favorites (showing only text that a movie has been added) via POST method</p>
+            <p>/users/favorites - Allows users to remove a movie from their favorites (showing only text that a movie has been removed) via DELETE method</p>
+            <p>/users - Allows existing users to deregister (showing only a text that user account has been removed) via DELETE method</p>
         </main>
         <footer></footer>
     </body>
