Edits endpoints and results, and adds arrays for movies/genres/directors/users to index.js file

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -20,8 +20,8 @@
             <p>/directors/[director_name] - Returns data (bio, birth year, death year) about a specific director via GET method</p>
             <p>/users - Allows new user to register via POST method</p>
             <p>/users/[user] - Allows user to update user information (username, email, password)</p>
-            <p>/users/favorites - Allows users to add a movie to their favorites (showing only text that a movie has been added) via POST method</p>
-            <p>/users/favorites - Allows users to remove a movie from their favorites (showing only text that a movie has been removed) via DELETE method</p>
+            <p>/users/[user]/favorites - Allows users to add a movie to their favorites (showing only text that a movie has been added) via POST method</p>
+            <p>/users/[user]/favorites - Allows users to remove a movie from their favorites (showing only text that a movie has been removed) via DELETE method</p>
             <p>/users - Allows existing users to deregister (showing only a text that user account has been removed) via DELETE method</p>
         </main>
         <footer></footer>
