--- a/public/documentation.html
+++ b/public/documentation.html
@@ -3,8 +3,16 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="styles.css">
         <title>Movie API | Documentation</title>
+        <style>
+            .endpoint-table, td, th {
+                border: 1px solid;
+            }
+ 
+            .endpoint-table {
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <main>
